@@ -1,3 +1,4 @@
+* Allow column widths to be reset
 * Allow column resizing
 * Add simple chat widget on sidebar
 * Support color as type of icon and image
